--- a/.github/workflows/Manual_main.yml
+++ b/.github/workflows/Manual_main.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout código
       uses: actions/checkout@v2
       with:
-        repository: juliobautistaSFTK/TallerGITHUB
+        repository: Br1ghts1d3/TallerGITHUB
         ref: main
     - name: Cat de archivo llamado prueba
       run: cat Prueba
