--- a/.github/workflows/WF_DEV_EEOL.yml
+++ b/.github/workflows/WF_DEV_EEOL.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout código
       uses: actions/checkout@v2
       with:
-        repository: Br1ghts1d3
+        repository: Br1ghts1d3/TallerGITHUB
         ref: DEV_EEOL
 
     - name: Build with Maven
